[package]
name = "mrg"
version = "0.1.4"
edition = "2024"

[dependencies]
ai_tokenizer_tools = { git = "https://github.com/cyberuser0x33/AITokenizerTools.git" }
clap = { version = "4.5", features = ["derive"] }
sha3 = "0.10"
hex = "0.4"
ignore = "0.4"
anyhow = "1.0"
dialoguer = "0.11"
chrono = "0.4.45"
reqwest = { version = "0.13.4", features = ["blocking"] }
tokenizers = "0.23.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
