[package]
name = "mrgfile"
version = "0.1.9"
edition = "2024"
authors = ["cyberuser0x33 <cyberuser0x33@protonmail.com>"]
description = "A fast CLI tool to merge project files into a single structured document optimized for LLM context (AI analysis)."
license = "AGPL-3.0-only"
repository = "https://github.com/cyberuser0x33/mrgfile"
readme = "README.md"
keywords = ["llm", "ai-context", "merger", "cli", "devtools"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha3 = "0.10"
hex = "0.4"
ignore = "0.4"
anyhow = "1.0"
dialoguer = "0.11"
chrono = "0.4.45"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "default-tls"] }
tokenizers = "0.23.1"
indicatif = "0.17"
rayon = "1.10"
tree-sitter = "0.20"
tree-sitter-rust = "=0.20.0"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.20"
aws-lc-rs = "1.17.0"
aws-lc-sys = "0.41.0"
regex = "1.10"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true


[[bin]]
name = "mrg"
path = "src/main.rs"
